# DLM

./: CMakeLists.txt
app/: CMakeLists.txt  main.cpp
benchmark/: CMakeLists.txt  main.cpp
include/dlm/: geometricfunctions.hpp  matrix2x2.hpp  vector2.hpp  vector3.hpp  vector4.hpp
src/: CMakeLists.txt
test/: CMakeLists.txt  geometricfunctionsTests.cpp  matrix2x2Tests.cpp  vector2Tests.cpp  vector3Tests.cpp  vector4Tests.cpp
